# ct-phrase-retrieval00

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
apps/: evaluate.py  query.py
configs/: deeplesion_kaggle.yaml
notebooks/: 00_build_index_dl.ipynb  01_query_panel.ipynb  02_eval_recallk.ipynb
pgr_dl/: io_deeplesion.py  temporal.py
scripts/: build_index.py  build_index_clip.py
src/ct_phrase_retrieval.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pgr/: __init__.py  cam.py  encoders.py  index.py  metrics.py  utils.py  viz.py
src/pgr_dl/: __init__.py  adapters.py  eval_dl.py  io_deeplesion.py  phrases.py  temporal.py  windowing.py
