[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ct-phrase-retrieval"
version = "0.0.1"
description = "Phrase-grounded CT slice retrieval mini"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pgr*", "pgr_dl*"]
